Adicionando campo email e tratamento de usuario desativado